[project]
name = "urban-mobility-data-explorer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.119.0",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.1.1",
    "scalar-fastapi>=1.4.3",
    "sqlmodel>=0.0.27",
]
